--- a/.github/workflows/mobile-release.yml
+++ b/.github/workflows/mobile-release.yml
@@ -39,12 +39,18 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Android
+          - name: Android Release
             os: macos-15
             buildArgs: "android -final -D officialBuild"
             setupCommand: sh ./setup/unix.sh
-            artifactName: androidBuild
+            artifactName: androidReleaseBuild
             artifactPath: "export/release/android/bin/app/build/outputs/apk/release/*.apk"
+          - name: Android Debug
+            os: macos-15
+            buildArgs: "android -debug"
+            setupCommand: sh ./setup/unix.sh
+            artifactName: androidDebugBuild
+            artifactPath: "export/debug/android/bin/app/build/outputs/apk/debug/*.apk"
     uses: ./.github/workflows/build.yml
     with:
         name: ${{ matrix.name }}
@@ -59,24 +65,39 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - name: Download Android Build
+      - name: Download Android Release Build
         uses: actions/download-artifact@main
         with:
-           name: androidBuild
-           path: /home/runner/androidBuild
+           name: androidReleaseBuild
+           path: /home/runner/androidReleaseBuild
+
+      - name: Download Android Debug Build
+        uses: actions/download-artifact@main
+        with:
+           name: androidDebugBuild
+           path: /home/runner/androidDebugBuild
 
       - name: List APK files
-        run: ls -lhR /home/runner/androidBuild
-
-      - name: Move Android File
         run: |
-          APK=$(find /home/runner/androidBuild -type f -name "*.apk" | head -n 1)
-          if [ -z "$APK" ]; then
-            echo "No APK found!"
+          ls -lhR /home/runner/androidReleaseBuild
+          ls -lhR /home/runner/androidDebugBuild
+
+      - name: Move APK Files
+        run: |
+          RELEASE_APK=$(find /home/runner/androidReleaseBuild -type f -name "*.apk" | head -n 1)
+          DEBUG_APK=$(find /home/runner/androidDebugBuild -type f -name "*.apk" | head -n 1)
+          if [ -z "$RELEASE_APK" ] && [ -z "$DEBUG_APK" ]; then
+            echo "No APKs found!"
             exit 1
           fi
-          echo "Found APK at: $APK"
-          mv "$APK" /home/runner/${{ env.PROJECT_NAME }}-Android.apk
+          if [ -n "$RELEASE_APK" ]; then
+            echo "Found Release APK at: $RELEASE_APK"
+            mv "$RELEASE_APK" /home/runner/${{ env.PROJECT_NAME }}-Android-Release.apk
+          fi
+          if [ -n "$DEBUG_APK" ]; then
+            echo "Found Debug APK at: $DEBUG_APK"
+            mv "$DEBUG_APK" /home/runner/${{ env.PROJECT_NAME }}-Android-Debug.apk
+          fi
 
       - name: Publish The Release
         uses: softprops/action-gh-release@v2
